# CastleMate

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp
assets/config/: theme.json
assets/images/: piece_atlas.json
assets/shaders/: board.frag  board.frag.spv  board.vert  board.vert.spv  outline.frag  outline.frag.spv  outline.vert  outline.vert.spv
ext/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/castlemate/: app.hpp  state.hpp  theme.hpp  viewport.hpp
lib/include/castlemate/core/: board.hpp  game_ending.hpp  magic.hpp  move.hpp  piece.hpp  position.hpp
lib/include/castlemate/states/: gameplay.hpp  menu.hpp
lib/include/castlemate/ui/: board_view.hpp  button.hpp  choose_color_menu.hpp  outline.hpp  widget.hpp
lib/include/castlemate/utils/: bit_math.hpp  constants.hpp  conversion.hpp
lib/src/: app.cpp  build_version.hpp.in
lib/src/core/: board.cpp
lib/src/states/: gameplay.cpp  menu.cpp
lib/src/ui/: board_view.cpp  outline.cpp
